@@ -1,5 +1,7 @@
 Version 2.01.12 - 
 ================================
+  Log an error if clvmd can't resolve a host name got from CCS
+  Fix potential spin loop in clvmd
 
 Version 2.01.11 - 13th June 2005
 ================================
